Transfer to java and annotation based configuration

--- a/hw1_testing/hw1-testing/src/main/resources/messages_ru_RU.properties
+++ b/hw1_testing/hw1-testing/src/main/resources/messages_ru_RU.properties
@@ -1,4 +1,4 @@
-inputName=Введите ваше имя:
-question=Вопрос: {0}?
-outputName=Тестируемый {0}
-results=Успешно пройдено {0} тестов из {1}
+inputName=Р’РІРµРґРёС‚Рµ РІР°С€Рµ РёРјСЏ:
+question=Р’РѕРїСЂРѕСЃ: {0}?
+outputName=РўРµСЃС‚РёСЂСѓРµРјС‹Р№ {0}
+results=РЈСЃРїРµС€РЅРѕ РїСЂРѕР№РґРµРЅРѕ {0} С‚РµСЃС‚РѕРІ РёР· {1}
