Changes on comments in pull requests

--- a/hw1_testing/hw1-testing/src/main/resources/messages_en_US.properties
+++ b/hw1_testing/hw1-testing/src/main/resources/messages_en_US.properties
@@ -1,4 +1,4 @@
-inputName=Input your name:
+input.name=Input your name:
 question=Question: {0}?
-outputName=Tested {0}
-results=Test passed {0} test total {1}
+output.name=Tested {0}
+results=Test passed {0} question total {1}
