--- a/hw1_testing/hw1-testing/src/main/resources/messages_ru_RU.properties
+++ b/hw1_testing/hw1-testing/src/main/resources/messages_ru_RU.properties
@@ -1,4 +1,4 @@
-inputName=Введите ваше имя:
+input.name=Введите ваше имя:
 question=Вопрос: {0}?
-outputName=Тестируемый {0}
+output.name=Тестируемый {0}
 results=Успешно пройдено {0} тестов из {1}
