--- a/hw5_testing/src/main/resources/messages.properties
+++ b/hw5_testing/src/main/resources/messages.properties
@@ -2,3 +2,6 @@ input.name=Input your name:
 question=Question: {0}?
 output.name=Tested {0}
 results=Test passed {0} question total {1}
+must.input.name.first=Must input student name by input-name command
+must.not.empty.student.name=Must input not empty student name
+ok=OK
